--- a/css/style3.css
+++ b/css/style3.css
@@ -12,6 +12,6 @@ background-size:100% 100%;}
 
 .clearfix ::after {content:""; display:table; clear:both;}
 
-nav li {display:inline-block; margin-left:30px; margin-right:85px; padding-top:25px;
+nav li {display:inline-block; margin-right:85px; padding-top:25px;
         position:relative;}
 nav a::before {content:""; display:block; height:5px; width:100%; background-color: rgba(0, 178, 255, 1); position:absolute; top: 0;}
